# spz

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  build_native.sh  build_wasm.sh
src/: bindings.cpp  main.cpp
src/cc/: load-spz.cc  splat-types.h
